deployment/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kic
  name: kic-users-service
spec:
  ports:
    - port: 50051
      targetPort: 50051
      name: grpc-web
  selector:
    app: kic-users
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kic
  name: kic-users
spec:
  selector:
    matchLabels:
      app: kic-users
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: kic
      labels:
        app: kic-users
    spec:
      containers:
        - image: gcr.io/PROJECT_ID/IMAGE:TAG
          name: kic-users
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
